--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "4.4.5"
+    "node": "^14.16.1"
   },
   "repository": {
     "type": "git",
